Add the images folder
Create the images folder and add an image of a lasagna to it.

Modify the lasagna.html file by adding a description, the list of ingredients
and the steps needed to make the lasagna.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,5 +6,23 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="../images/lasagna.jpeg" alt="lasagna">
+    <h2>Description</h2>
+    <p>One of the easiest to make lasagnas, originating from Italy, very tasty and good for every occasion.</p>
+    <p>Just mix all the ingredients together and you're good to go.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>cheese</li>
+        <li>tomatoes</li>
+        <li>onions</li>
+        <li>flour</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Add water to the flour.</li>
+        <li>Stir for five minutes.</li>
+        <li>Bake for 20 minutes.</li>
+        <li>Put the onions and tomatoes on the top.</li>
+    </ol>
 </body>
 </html>
